# arcium-private-perps-demo

./: .env.example  ARCIUM_RTG_DESIGN_PROMPT.md  ARCIUM_SETUP.md  Anchor.toml  Cargo.toml  DEMO_INSTRUCTIONS.md  DEPLOY.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_FIX.md  DEPLOY_NOW.md  GET_PRODUCTION_URL.md  IMPROVED_V0_PROMPT.md  LOGO_INTEGRATION.md  PROJECT_SUMMARY.md  PUSH_INSTRUCTIONS.md  PUSH_WITH_TOKEN.md  QUICK_DEPLOY.sh  QUICK_PUSH.sh  QUICK_V0_PROMPT.txt  README.md  SETUP_SOLANA.md  SHARING_GUIDE.md  TEST_CHECKLIST.md  TROUBLESHOOTING.md  V0_ENHANCED_AESTHETICS_PROMPT.txt  V0_EXACT_RTG_PROMPT.txt  V0_INTEGRATION.md  V0_PRIVATE_PERPS_LANDING.txt  V0_PROMPT.md  V0_PROMPT_FOR_V0.txt  VERCEL_BRANCH_FIX.md  VERCEL_BUILD_FIX.md  VERCEL_DEPLOYMENT_REVIEW.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  push-to-github.sh
app/: globals.css  layout.tsx  page-original.tsx  page-rtg-style.tsx  page.tsx  providers.tsx
programs/private-perps/src/: lib.rs
