[package]
name = "private-perps"
version = "0.1.0"
description = "Private Perpetuals Trading Platform using Arcium"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "private_perps"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
